@@ -121,7 +121,6 @@ static auto managedOutputPort = Pothos::ManagedClass()
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, totalElements))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, totalMessages))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, produce))
-    .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, popBuffer))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, popElements))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, getBuffer))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::OutputPort, postLabel))
