@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.6.0 (pending)
 ==========================
 
+- Removed deprecated API call OutputPort::popBuffer()
 - Re-implement RingDeque container to use std::allocator
 - Removed previously unused ObjectM class (mutable object)
 - Added Pothos::Util::SpinLockRW for single write, multi-read
@@ -86,7 +87,7 @@ Release 0.4.0 (2016-08-02)
 
 Deprecated Framework API calls:
 
-- Deprecated OutputPort::popBytes, use popElements
+- Deprecated OutputPort::popBuffer, use popElements
 
 New Framework API calls:
 
